# lib-say

./: .gitignore  CMakeLists.txt  README.md  build.bat
.claude/: settings.local.json
documentation/: architecture-rewrite-fricatives-affricates.md  audit.md  lua.md  phoneme-feedback-workflow.md  say.md
lua/: CMakeLists.txt
reference/phonemes_extractor/: phonemes.txt
samples/: generate.py
src/: main.c  say.c  say.h  say_amiga_bridge.c  say_amiga_compat.h  say_amiga_parms.h  say_amiga_pc.h  say_amiga_phonet.h  say_amiga_phonet_subs.h  say_audio_io.c  say_internal.h  say_lua.c  say_nrl_rules.inc  say_phonemes.c  say_phonemes_amiga.c  say_phonet.c  say_phonol.c  say_prosody.c  say_synth.c  say_synth_amiga.c  say_synth_tables.c  say_synth_tables.inc  say_text.c  say_text_en_nrl.c
tests/: corpus.tsv  regression.py
tests/expected/: baseline.tsv
